frontend - fixed layout issues between components in Home Container, Info Component design is updated

--- a/frontend/src/app/components/general-components/containers/home-container/home-container.component.css
+++ b/frontend/src/app/components/general-components/containers/home-container/home-container.component.css
@@ -17,6 +17,7 @@
     display:flex;
     flex-direction: column;
     align-items: center;
+
     animation: fade-in 1s ease-in-out;
     opacity: 0;
     transform: translateY(20px);
@@ -24,15 +25,25 @@
 }
 
 body {
-    margin-top: -20px;
-    margin-left: -10px;
-    margin-right: -8px;
-    margin-bottom: -20px;
+    margin: -9px;
+    box-sizing: border-box;
+    display: block;
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    overflow-y: auto;
     background-image: url('../../../../../assets/background.jpg');
     background-repeat: no-repeat;
     background-size: cover;
     animation: fade-in 1s ease-in-out;
-    vertical-align: top;
-    overflow-x: hidden;
-    overflow-y: hidden;
+}
+
+.page {
+    margin-left: auto;
+    margin-right: auto;
+    padding-left: 1.5rem;
+    padding-right: 1.5rem;
+    max-width: 2000px;
 }
