--- a/frontend/src/app/components/info/info.component.css
+++ b/frontend/src/app/components/info/info.component.css
@@ -111,20 +111,20 @@
     10.2558%, 17.0930% { content: "developer"; }
   
     30.7674%, 51.2791% { content: ""; }
-    31.9070%, 50.1395% { content: "a"; }
-    33.0465%, 49.0000% { content: "ac"; }
-    34.1860%, 47.8605% { content: "ach"; }
-    35.3256%, 46.7209% { content: "achie"; }
-    36.4651%, 45.5814% { content: "achieve"; }
-    37.6047%, 44.4419% { content: "achiever"; }
+    31.9070%, 50.1395% { content: "l"; }
+    33.0465%, 49.0000% { content: "le"; }
+    34.1860%, 47.8605% { content: "lea"; }
+    35.3256%, 46.7209% { content: "lear"; }
+    36.4651%, 45.5814% { content: "learn"; }
+    37.6047%, 44.4419% { content: "learner"; }
   
     54.6977%, 75.2093% { content: ""; }
-    55.8372%, 74.0698% { content: "l"; }
-    56.9767%, 72.9302% { content: "le"; }
-    58.1163%, 71.7907% { content: "lea"; }
-    59.2558%, 70.6512% { content: "lear"; }
-    60.3953%, 69.5116% { content: "learn"; }
-    61.5349%, 68.3721% { content: "learner"; }
+    55.8372%, 74.0698% { content: "p"; }
+    56.9767%, 72.9302% { content: "pu"; }
+    58.1163%, 71.7907% { content: "pur"; }
+    59.2558%, 70.6512% { content: "purs"; }
+    60.3953%, 69.5116% { content: "pursu"; }
+    61.5349%, 68.3721% { content: "pursuer"; }
   
     78.6279%, 96.8605% { content: ""; }
     79.7674%, 95.7209% { content: "h"; }
@@ -227,8 +227,8 @@
     content: "";
     position: absolute;
     top: 1%;
-    left: 1%;
-    width: 98%;
+    left: 1.8%;
+    width: 96.2%;
     height: 98%;
     background: repeating-linear-gradient(to bottom, transparent 0%, rgba(64, 144, 181, 0.6) 1px, rgb(0, 0, 0) 3px, rgba(64, 144, 181, 0.3019607843) 5px, #153544 4px, transparent 0.5%), repeating-linear-gradient(to left, hsl(295, 60%, 12%) 100%, hsla(295, 60%, 12%, 0.99) 100%);
     box-shadow: inset 0px 0px 30px 40px hsl(296, 59%, 10%);
